--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -92,3 +92,8 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/NavigationSystem.RecastNavMesh]
+AgentRadius=4.000000
+AgentHeight=4.000000
+MaxSimplificationError=0.200000
+
