--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -81,6 +81,7 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="MoveJump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=K)
 +ActionMappings=(ActionName="Attack_U",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=U)
 +ActionMappings=(ActionName="OpenBackpack",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=B)
++ActionMappings=(ActionName="OpenSettingUI",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=A)
 DefaultPlayerInputClass=/Script/EnhancedInput.EnhancedPlayerInput
