--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Map/WoodMap_1.WoodMap_1
-EditorStartupMap=/Game/Map/WoodMap_1.WoodMap_1
+GameDefaultMap=/Game/Map/MenuMap.MenuMap
+EditorStartupMap=/Game/Map/MenuMap.MenuMap
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
