--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,150 @@
 
+
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=7D8FC75D43C3D8F9BC827CA35C9BCE2A
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+Build=IfProjectHasCode
+BuildConfiguration=PPBC_Development
+BuildTarget=
+FullRebuild=False
+ForDistribution=False
+IncludeDebugFiles=False
+BlueprintNativizationMethod=Disabled
+bIncludeNativizedAssetsInProjectGeneration=False
+bExcludeMonolithicEngineHeadersInNativizedCode=False
+UsePakFile=True
+bUseIoStore=True
+bUseZenStore=False
+bMakeBinaryConfig=False
+bGenerateChunks=False
+bGenerateNoChunks=False
+bChunkHardReferencesOnly=False
+bForceOneChunkPerFile=False
+MaxChunkSize=0
+bBuildHttpChunkInstallData=False
+HttpChunkInstallDataDirectory=(Path="")
+WriteBackMetadataToAssetRegistry=Disabled
+bWritePluginSizeSummaryJsons=False
+bCompressed=True
+PackageCompressionFormat=Oodle
+bForceUseProjectCompressionFormatIgnoreHardwareOverride=False
+PackageAdditionalCompressionOptions=
+PackageCompressionMethod=Kraken
+PackageCompressionLevel_DebugDevelopment=4
+PackageCompressionLevel_TestShipping=4
+PackageCompressionLevel_Distribution=7
+PackageCompressionMinBytesSaved=1024
+PackageCompressionMinPercentSaved=5
+bPackageCompressionEnableDDC=False
+PackageCompressionMinSizeToConsiderDDC=0
+HttpChunkInstallDataVersion=
+IncludePrerequisites=True
+IncludeAppLocalPrerequisites=False
+bShareMaterialShaderCode=True
+bDeterministicShaderCodeOrder=False
+bSharedMaterialNativeLibraries=True
+ApplocalPrerequisitesDirectory=(Path="")
+IncludeCrashReporter=False
+InternationalizationPreset=English
+-CulturesToStage=en
++CulturesToStage=en
+LocalizationTargetCatchAllChunkId=0
+bCookAll=False
+bCookMapsOnly=False
+bTreatWarningsAsErrorsOnCook=False
+bSkipEditorContent=False
+bSkipMovies=False
+-IniKeyDenylist=KeyStorePassword
+-IniKeyDenylist=KeyPassword
+-IniKeyDenylist=DebugKeyStorePassword
+-IniKeyDenylist=DebugKeyPassword
+-IniKeyDenylist=rsa.privateexp
+-IniKeyDenylist=rsa.modulus
+-IniKeyDenylist=rsa.publicexp
+-IniKeyDenylist=aes.key
+-IniKeyDenylist=SigningPublicExponent
+-IniKeyDenylist=SigningModulus
+-IniKeyDenylist=SigningPrivateExponent
+-IniKeyDenylist=EncryptionKey
+-IniKeyDenylist=DevCenterUsername
+-IniKeyDenylist=DevCenterPassword
+-IniKeyDenylist=IOSTeamID
+-IniKeyDenylist=SigningCertificate
+-IniKeyDenylist=MobileProvision
+-IniKeyDenylist=IniKeyDenylist
+-IniKeyDenylist=IniSectionDenylist
++IniKeyDenylist=KeyStorePassword
++IniKeyDenylist=KeyPassword
++IniKeyDenylist=DebugKeyStorePassword
++IniKeyDenylist=DebugKeyPassword
++IniKeyDenylist=rsa.privateexp
++IniKeyDenylist=rsa.modulus
++IniKeyDenylist=rsa.publicexp
++IniKeyDenylist=aes.key
++IniKeyDenylist=SigningPublicExponent
++IniKeyDenylist=SigningModulus
++IniKeyDenylist=SigningPrivateExponent
++IniKeyDenylist=EncryptionKey
++IniKeyDenylist=DevCenterUsername
++IniKeyDenylist=DevCenterPassword
++IniKeyDenylist=IOSTeamID
++IniKeyDenylist=SigningCertificate
++IniKeyDenylist=MobileProvision
++IniKeyDenylist=IniKeyDenylist
++IniKeyDenylist=IniSectionDenylist
+-IniSectionDenylist=HordeStorageServers
+-IniSectionDenylist=StorageServers
+-IniSectionDenylist=/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings
++IniSectionDenylist=HordeStorageServers
++IniSectionDenylist=StorageServers
++IniSectionDenylist=/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings
++MapsToCook=(FilePath="/Game/Map/MenuMap")
++MapsToCook=(FilePath="/Game/Map/WoodMap_1")
++MapsToCook=(FilePath="/Game/Map/WoodMap_2")
++MapsToCook=(FilePath="/Game/Map/WoodMap_3")
++DirectoriesToAlwaysCook=(Path="/NNEDenoiser")
++DirectoriesToAlwaysCook=(Path="/Game/Backpack")
++DirectoriesToAlwaysCook=(Path="/Game/Backpack/Item")
++DirectoriesToAlwaysCook=(Path="/Game/Backpack/Item/Potions")
++DirectoriesToAlwaysCook=(Path="/Game/AI")
++DirectoriesToAlwaysCook=(Path="/Game/Basic")
++DirectoriesToAlwaysCook=(Path="/Game/Basic/InputAction")
++DirectoriesToAlwaysCook=(Path="/Game/Character")
++DirectoriesToAlwaysCook=(Path="/Game/Character/Swordsman")
++DirectoriesToAlwaysCook=(Path="/Game/Character/Swordsman/AnimSequences")
++DirectoriesToAlwaysCook=(Path="/Game/Character/Swordsman/Notify_Swordsman")
++DirectoriesToAlwaysCook=(Path="/Game/Character/Swordsman/Swordsman_Sound")
++DirectoriesToAlwaysCook=(Path="/Game/Content/Character")
++DirectoriesToAlwaysCook=(Path="/Game/Content/Character/Swordsman")
++DirectoriesToAlwaysCook=(Path="/Game/Content/Character/Swordsman/Attack01")
++DirectoriesToAlwaysCook=(Path="/Game/Content/Character/Swordsman/Attack02")
++DirectoriesToAlwaysCook=(Path="/Game/Content/Character/Swordsman/AttackNormal")
++DirectoriesToAlwaysCook=(Path="/Game/Content/Character/Swordsman/Death")
++DirectoriesToAlwaysCook=(Path="/Game/Content/Character/Swordsman/Jump")
++DirectoriesToAlwaysCook=(Path="/Game/Content/Character/Swordsman/Idle")
++DirectoriesToAlwaysCook=(Path="/Game/Content/Character/Swordsman/Walk")
++DirectoriesToAlwaysCook=(Path="/Game/Content/Item")
++DirectoriesToAlwaysCook=(Path="/Game/Content/Item/Potions")
++DirectoriesToAlwaysCook=(Path="/Game/Content/Map")
++DirectoriesToAlwaysCook=(Path="/Game/Content/Map/Woods")
++DirectoriesToAlwaysCook=(Path="/Game/Content/Map/Woods/BackGround")
++DirectoriesToAlwaysCook=(Path="/Game/Content/Map/Woods/Decoration")
++DirectoriesToAlwaysCook=(Path="/Game/Content/PlayerState")
++DirectoriesToAlwaysCook=(Path="/Game/Enemy")
++DirectoriesToAlwaysCook=(Path="/Game/Enemy/Orc")
++DirectoriesToAlwaysCook=(Path="/Game/Enemy/Orc/AnimationMaterial")
++DirectoriesToAlwaysCook=(Path="/Game/Enemy/Orc/AnimationMaterial/Attack")
++DirectoriesToAlwaysCook=(Path="/Game/Enemy/Orc/AnimationMaterial/Death")
++DirectoriesToAlwaysCook=(Path="/Game/Enemy/Orc/AnimationMaterial/Hurt")
++DirectoriesToAlwaysCook=(Path="/Game/Enemy/Orc/AnimationMaterial/Idle")
++DirectoriesToAlwaysCook=(Path="/Game/Enemy/Orc/AnimationMaterial/Walk")
++DirectoriesToAlwaysCook=(Path="/Game/Enemy/Orc/AnimSequences")
++DirectoriesToAlwaysCook=(Path="/Game/Map")
++DirectoriesToAlwaysCook=(Path="/Game/Map/LevelJump")
++DirectoriesToAlwaysCook=(Path="/Game/Save")
++DirectoriesToAlwaysCook=(Path="/Game/UI")
++DirectoriesToAlwaysCook=(Path="/Game/UI/SettingUI")
+bRetainStagedDirectory=False
+CustomStageCopyHandler=
+
